--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-  <p>Pierwszy paragraf</p>  
+  <p>Pierwszy paragraf</p> 
+  <p>Trzeci paragraf</p> 
 </body>
 </html>
