--- a/warsztaty/formularz.html
+++ b/warsztaty/formularz.html
@@ -5,7 +5,7 @@
     <title>Formularz</title>
 </head>
 <body>
-    <form action="https://formspree.io/aska.szewczyk@gmail.com" method="post">
+    <form action="https://formspree.io/akreska@gmail.com" method="post">
         <label for="imie">Imię</label><br />
         <input type="text" name="imie" id="imie"><br />
         <label for="nazwisko">Nazwisko</label><br />
