--- a/warsztaty/formularz.html
+++ b/warsztaty/formularz.html
@@ -15,11 +15,11 @@
         <label for="numer telefonu">Numer telefonu</label><br />
         <input type="text" name="numertelefonu" id="numertelefonu"><br />
         <label for="wiadomosc">Wiadomość</label><br />
-        <input type="text" name="wiadomosc" id="wiadomosc"><br />
+        <textarea maxlength=“100”></textarea> <br />
         <select name="wybierz">
             <option value="value1">Kobieta</option>
             <option value="value2">Mężczyzna</option>
-         </select><br />
+        </select><br />
         <input type="radio" name="gender" value="kobieta" checked> Kobieta<br>
         <input type="radio" name="gender" value="mezczyzna"> Mężczyzna<br>
         <input type="radio" name="gender" value="inne"> Inne<br />
