--- a/warsztaty/formularz.html
+++ b/warsztaty/formularz.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Formularz</title>
 </head>
+
 <body>
     <form action="https://formspree.io/aska.szewczyk@gmail.com" method="post">
         <label for="imie">Imię</label><br />
         <input type="text" name="imie" id="imie"><br />
         <label for="nazwisko">Nazwisko</label><br />
-        <input type="text" name="nazwisko" id="nazwisko"><br /> 
+        <input type="text" name="nazwisko" id="nazwisko"><br />
         <label for="email">Email</label><br />
         <input type="text" name="email" id="email"><br />
         <label for="numer telefonu">Numer telefonu</label><br />
         <input type="text" name="numertelefonu" id="numertelefonu"><br />
         <label for="wiadomosc">Wiadomość</label><br />
         <textarea maxlength=“100”></textarea> <br />
+        <label for="wybierz">Wybierz</label><br />
         <select name="wybierz">
             <option value="value1">Kobieta</option>
             <option value="value2">Mężczyzna</option>
         </select><br />
+        <label for="wybierz plec">Wybierz płeć</label><br />
         <input type="radio" name="gender" value="kobieta" checked> Kobieta<br>
         <input type="radio" name="gender" value="mezczyzna"> Mężczyzna<br>
         <input type="radio" name="gender" value="inne"> Inne<br />
         <input type="submit" value="Wyślij">
-        
+
     </form>
 </body>
+
 </html>
