--- a/warsztaty/formularz.html
+++ b/warsztaty/formularz.html
@@ -14,16 +14,16 @@
         <input type="text" name="nazwisko" id="nazwisko"><br />
         <label for="email">Email</label><br />
         <input type="text" name="email" id="email"><br />
-        <label for="numer telefonu">Numer telefonu</label><br />
+        <label for="numer-telefonu">Numer telefonu</label><br />
         <input type="text" name="numertelefonu" id="numertelefonu"><br />
         <label for="wiadomosc">Wiadomość</label><br />
-        <textarea maxlength=“100”></textarea> <br />
+        <textarea maxlength="100"></textarea> <br />
         <label for="wybierz">Wybierz</label><br />
         <select name="wybierz">
             <option value="value1">Kobieta</option>
             <option value="value2">Mężczyzna</option>
         </select><br />
-        <label for="wybierz plec">Wybierz płeć</label><br />
+        <label for="wybierz-plec">Wybierz płeć</label><br />
         <input type="radio" name="gender" value="kobieta" checked> Kobieta<br>
         <input type="radio" name="gender" value="mezczyzna"> Mężczyzna<br>
         <input type="radio" name="gender" value="inne"> Inne<br />
