--- a/warsztaty/formularz.html
+++ b/warsztaty/formularz.html
@@ -24,9 +24,9 @@
             <option value="value2">Mężczyzna</option>
         </select><br />
         <label for="wybierz-plec">Wybierz płeć</label><br />
-        <input type="radio" name="gender" value="kobieta" checked> Kobieta<br>
-        <input type="radio" name="gender" value="mezczyzna"> Mężczyzna<br>
-        <input type="radio" name="gender" value="inne"> Inne<br />
+        <input type="radio" name="plec" value="kobieta" checked> Kobieta<br>
+        <input type="radio" name="plec" value="mezczyzna"> Mężczyzna<br>
+        <input type="radio" name="plec" value="inne"> Inne<br />
         <input type="submit" value="Wyślij">
 
     </form>
