--- a/formlularz-html5/index.html
+++ b/formlularz-html5/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Formularz</title>
 </head>
+
 <body>
-    
+    <form action="https://formspree.io/aska.szewczyk@gmail.com" method="post">
+        <input type="text" name="Imię" />
+        <input type="text" name="Nazwisko" />
+        <input type="text" name="Mail" />
+        <input type="text" name="Telefon" />
+
+
+    </form>
+
 </body>
+
 </html>
