zmiana nazw miast

--- a/formlularz-html5/index.html
+++ b/formlularz-html5/index.html
@@ -15,9 +15,9 @@
         <input type="text" name="Telefon" /><br>
         <select name="Wybierz">
            <option value="value1" selected>Wybierz</option>
-           <option value="value2">Kraków</option>
-           <option value="value3">Warszawa</option>
-           <option value="value4">Gdańsk</option>
+           <option value="krakow">Kraków</option>
+           <option value="warszawa">Warszawa</option>
+           <option value="gdansk">Gdańsk</option>
         </select> <br>
 
         <input type="radio" name="plec" value="Kobieta" checked>Kobieta<br>
