--- a/formlularz-html5/index.html
+++ b/formlularz-html5/index.html
@@ -20,10 +20,12 @@
            <option value="gdansk">Gdańsk</option>
         </select> <br>
 
-        <input type="radio" name="plec" value="Kobieta" checked>Kobieta<br>
-        <input type="radio" name="plec" value="Mężczyzna">Mężczyzna<br>
-        <input type="radio" name="plec" value="Inne">Inne<br> 
-        Zgoda na przetworzenie danych osobowych <br>
+        <label for="plec">Kobieta</label>
+        <input type="radio" name="plec" id="kobieta" value="kobieta">
+        <label for="plec">Mężczyzna</label>
+        <input type="radio" name="plec" id="mezczyzna" value="mezczyzna">
+        <label for="plec">Inne</label>
+        <input type="radio" name="plec" id="inne" value="inne"> Zgoda na przetworzenie danych osobowych <br>
 
         <input type="checkbox" name="zgoda" value="tak">Wyrażam zgodę <br>
         <input type="checkbox" name="zgoda" value="nie">Nie wyrażam zgody <br> Wiadomość <br>
