--- a/formlularz-html5/index.html
+++ b/formlularz-html5/index.html
@@ -21,11 +21,12 @@
         </select> <br>
 
         <label for="plec">Kobieta</label>
-        <input type="radio" name="plec" id="kobieta" value="kobieta">
+        <input type="radio" name="plec" id="kobieta" value="kobieta"> <br>
         <label for="plec">Mężczyzna</label>
-        <input type="radio" name="plec" id="mezczyzna" value="mezczyzna">
+        <input type="radio" name="plec" id="mezczyzna" value="mezczyzna"> <br>
         <label for="plec">Inne</label>
-        <input type="radio" name="plec" id="inne" value="inne"> Zgoda na przetworzenie danych osobowych <br>
+        <input type="radio" name="plec" id="inne" value="inne"> <br>
+        Zgoda na przetworzenie danych osobowych <br>
 
         <input type="checkbox" name="zgoda" value="tak">Wyrażam zgodę <br>
         <input type="checkbox" name="zgoda" value="nie">Nie wyrażam zgody <br> Wiadomość <br>
