--- a/formlularz-html5/index.html
+++ b/formlularz-html5/index.html
@@ -8,36 +8,36 @@
 
 <body>
     <form action="https://formspree.io/aska.szewczyk@gmail.com" method="post">
-        Imię <br>
-        <input type="text" name="Imię" /><br> Nazwisko <br>
-        <input type="text" name="Nazwisko" /><br> Mail <br>
-        <input type="text" name="Mail" /><br> Telefon <br>
-        <input type="text" name="Telefon" /><br>
+        <label for="imie">Imię:</label><br>
+        <input type="text" name="imie" id="imie"><br>
+        <label for="nazwisko">Nazwisko:</label><br>
+        <input type="text" name="nazwisko" id="nazwisko"><br>
+        <label for="email">Email:</label><br>
+        <input type="text" name="email" id="email"><br>
+        <label for="numer-telefonu">Numer telefonu:</label><br>
+        <input type="text" name="numer-telefonu" id="numer-telefonu"><br>
         <select name="Wybierz">
            <option value="value1" selected>Wybierz</option>
            <option value="krakow">Kraków</option>
            <option value="warszawa">Warszawa</option>
            <option value="gdansk">Gdańsk</option>
         </select> <br>
-
-        <label for="plec">Kobieta</label>
+        Płeć: <br>
+        <label for="kobieta">Kobieta</label>
         <input type="radio" name="plec" id="kobieta" value="kobieta"> <br>
-        <label for="plec">Mężczyzna</label>
+        <label for="mezczyzna">Mężczyzna</label>
         <input type="radio" name="plec" id="mezczyzna" value="mezczyzna"> <br>
-        <label for="plec">Inne</label>
-        <input type="radio" name="plec" id="inne" value="inne"> <br>
+        <label for="inne">Inne</label>
+        <input type="radio" name="plec" id="inne" value="inne"> <br> 
         Zgoda na przetworzenie danych osobowych <br>
+        <label for="tak">Tak, wyrażam zgodę</label><br>
+        <input type="checkbox" name="tak" value="Tak" id="tak"><br>
 
-        <input type="checkbox" name="zgoda" value="tak">Wyrażam zgodę <br>
-        <input type="checkbox" name="zgoda" value="nie">Nie wyrażam zgody <br> Wiadomość <br>
-        <textarea maxlength="800"></textarea><br>
-        <input type="submit" value="Wyślij">
-
-
+        <label for="wiadomosc">Wiadomość</label><br>
+        <textarea name="wiadomosc" id="wiadomosc" maxlength="700"></textarea><br>
 
 
     </form>
-
 </body>
 
 </html>
