--- a/warsztaty/portfolio/index.html
+++ b/warsztaty/portfolio/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <!--GOOGLE FONTS-->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700|Roboto:300,400,700&amp;subset=latin-ext" rel="stylesheet">
+
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" href="css/fontawesome-all.min.css">
+
+    <!--Style css-->
+    <link rel="stylesheet" href="css/style.css">
+
+    <title>Moje portfolio</title>
 </head>
+
 <body>
+   
+    <!--    NAWIGACJA-->
+    <nav>
+        <ul>
+            <li><a href="#o mnie">o mnie</a></li>
+            <li><a href="#umiejetnosci">umiejętności</a></li>
+            <li><a href="#portfolio">portfolio</a></li>
+            <li><a href="#kontakt">kontakt</a></li>
+        </ul>
+    </nav>
     
+<!--HEADER-->
+<header id="myheader">
+<div id="header-content">
+    
+</div>
+</header>
+
 </body>
+
 </html>
