--- a/warsztaty/portfolio/index.html
+++ b/warsztaty/portfolio/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="css/fontawesome-all.min.css">
 
     <!--Style css-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <meta name="viewport" content= "width=device-width, initial-scale=1.0" >
+   <meta name="viewport" content= "width=device-width, initial-scale=1.0" >
 
     <title>Moje portfolio</title>
 </head>
@@ -29,50 +30,81 @@
     </nav>
     <!--    NAWIGACJA STOP -->
     <!--HEADER START-->
+
     <header id="main-header">
         <div class="main-header-content">
             <h1>Joanna <span>Kowal</span></h1>
             <h2>Front-End Developer</h2>
         </div>
     </header>
+
     <!--HEADER STOP-->
 
     <!--ABOUT-->
+
     <section id="about">
-        <h2>O <span>mnie</span></h2>
-        <figure><img src="img/jan-nowak.jpg" alt="Jan kowalski"></figure>
-        <article>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim accusamus, tenetur aspernatur cupiditate dolores veritatis odit molestiae rerum quas optio magnam minima fugiat earum doloremque impedit blanditiis, tempora consequatur eius! Non earum illum provident adipisci quasi consectetur cupiditate dolores praesentium animi reiciendis eius labore, quisquam mollitia repellat error voluptatibus hic.0 Lorem ipsum dolor sit amet, coorporis molestiae.deleniti placeat incidunt. Repellendus impedit minima sit placeat. Est ab qui quam totam explicabo nemo eligendi incidunt praesentium quo sapiente. Dolorem maxime, dolore tempore, quidem autem minima repellat sed veritatis et. Sit harum, veniam eum modi explicabo eos tempora quam autem rem doloremque, vero? Quis atque similique beatae esse, ab deleniti aliquid aliquam, natus provident, necessitatibus soluta. Sunt autem rem iure, cum facilis nam in voluptates iusto, ullam natus repellat tenetur, nemo saepe culpa veniam. Sed adipisci, a numquam cumque quibusdam expedita, rerum deleniti sint! Assumenda soluta provident officiis dignissimos dolor ea accusantiu Dolorem maxime, dolore tempore, quidem autem minima repellat sed veritatis et. Sit harum, veniam eum modi explicabo eos tempora quam autem rem doloremque, vero? Quis atque similique beatae esse, ab deleniti aliquid aliquam, natus provident, necessitatibus soluta. Sunt autem rem iure, cum facilis nam in voluptates iusto, ullam natus repellat tenetur, nemo saepe culpa veniam. Sed adipisci, a numquam cumque quibusdam expedita, rerum deleniti sint! Assumenda soluta provident officiis dignissimos dolor ea accusantiu</p>
-        </article>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2>O <span>mnie</span></h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <figure><img src="img/jan-nowak.jpg" alt="Jan kowalski"></figure>
+                </div>
+                <div class="col-lg-6">
+                    <article>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim accusamus, tenetur aspernatur cupiditate dolores veritatis odit molestiae rerum quas optio magnam minima fugiat earum doloremque impedit blanditiis, tempora consequatur eius! Non earum illum provident adipisci quasi consectetur cupiditate dolores praesentium animi reiciendis eius labore, quisquam mollitia repellat error voluptatibus hic.0 Lorem ipsum dolor sit amet, coorporis molestiae.deleniti placeat incidunt. Repellendus impedit minima sit placeat. Est ab qui quam totam explicabo nemo eligendi incidunt praesentium quo sapiente. Dolorem maxime, dolore tempore, quidem autem minima repellat sed veritatis et. Sit harum, veniam eum modi explicabo eos tempora quam autem rem doloremque, vero? Quis atque similique beatae esse, ab deleniti aliquid aliquam, natus provident, necessitatibus soluta. Sunt autem rem iure, cum facilis nam in voluptates iusto, ullam natus repellat tenetur, nemo saepe culpa veniam. Sed adipisci, a numquam cumque quibusdam expedita, rerum deleniti sint! Assumenda soluta provident officiis dignissimos dolor ea accusantiu Dolorem maxime, dolore tempore, quidem autem minima repellat sed veritatis et. Sit harum, veniam eum modi explicabo eos tempora quam autem rem doloremque, vero? Quis atque similique beatae esse, ab deleniti aliquid aliquam, natus provident, necessitatibus soluta. Sunt autem rem iure, cum facilis nam in voluptates iusto, ullam natus repellat tenetur, nemo saepe culpa veniam. Sed adipisci, a numquam cumque quibusdam expedita, rerum deleniti sint! Assumenda soluta provident officiis dignissimos dolor ea accusantiu</p>
+                    </article>
+                </div>
+            </div>
+        </div>
+
+
     </section>
+
 
 
     <!--ABOUT STOP-->
 
 
     <!--  SKILLS    -->
+
+
     <section id="skills">
-        <h2>Moje <span> umiejętności</span></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate voluptatem nam cum assumenda magni voluptatum, quos praesentium odit cumque amet maiores accusamus ad laborum deleniti autem harum nobis quisquam quam tenetur voluptatibus ipsam veniam veriticia. Esse, ipsum, laudantium. Nulla, quas? Quis iusto qui, at nisi quasi fugit ipsum ids eius provident voluptatum explicabo perspiciatis. Quasi, praesentium magnam necessitatibus temporibus, officia fugit pariatur nemo et consectetur at doloribus molestias voluptatum nostrum repudiandae! Incidunt!</p>
-        <div class="skills-icons">
-            <figure class="skills-icons-item"><img src="icons/html5.png" alt="html">
-                <figcaption>Html</figcaption>
-            </figure>
-
-            <figure class="skills-icons-item"><img src="icons/css3.png" alt="css">
-                <figcaption>Css3</figcaption>
-            </figure>
-
-            <figure class="skills-icons-item"><img src="icons/js.png" alt="js">
-                <figcaption>JS</figcaption>
-            </figure>
-
-            <figure class="skills-icons-item"><img src="icons/jquery.png" alt="jquery">
-                <figcaption>jQuery</figcaption>
-            </figure>
-
+        <div class="container text-center">
+            <div class="row">
+                <h2>Moje <span> umiejętności</span></h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate voluptatem nam cum assumenda magni voluptatum, quos praesentium odit cumque amet maiores accusamus ad laborum deleniti autem harum nobis quisquam quam tenetur voluptatibus ipsam veniam veriticia. Esse, ipsum, laudantium. Nulla, quas? Quis iusto qui, at nisi quasi fugit ipsum ids eius provident voluptatum explicabo perspiciatis. Quasi, praesentium magnam necessitatibus temporibus, officia fugit pariatur nemo et consectetur at doloribus molestias voluptatum nostrum repudiandae! Incidunt!</p>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 col-md-3 ">
+                    <div class="skills-icons">
+                        <figure class="skills-icons-item"><img src="icons/html5.png" alt="html">
+                            <figcaption>Html</figcaption>
+                        </figure>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 ">
+                    <figure class="skills-icons-item"><img src="icons/css3.png" alt="css">
+                        <figcaption>Css3</figcaption>
+                    </figure>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 ">
+                    <figure class="skills-icons-item"><img src="icons/js.png" alt="js">
+                        <figcaption>JS</figcaption>
+                    </figure>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 ">
+                    <figure class="skills-icons-item"><img src="icons/jquery.png" alt="jquery">
+                        <figcaption>jQuery</figcaption>
+                    </figure>
+                </div>
+            </div>
         </div>
+
     </section>
 
 
@@ -80,13 +112,15 @@
     <section id=portfolio>
         <h2>Moje <span>portfolio</span></h2>
         <div class="portfolio-items">
-
+            <div class="container text-center">
+            <div class="row">
+<div class="col-6 col-md-4">
             <div class="portfolio-item" id="portfolio-item-1">
                 <div class="item-mask">
                     <div class="mask-content">
                         <div class="item-content-inner">
                             <h1>Lorem ipsum</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum saepe dolores, corrupti voluptatibus, dolore tempore minima accusamus maiores fugiat laudantium reprehenderit ut in modi delectus odit vel laboriosam explicabo. Adipisci maxime, ad quasi animi necessitatibus. Corporis non veritatis quia inventore.</p>
+                            <p>Lorem ipsum dolor siobdvf fvewfnew fwefnwel fwefnewf ewfpewnfe wfewofnewf ewfiunew fweiufbew fewiubf wefuiewb jfit amet, consectetur adipisicing elit. Illum saepe dolores,vdsvWBVwhreifv wvweihbfc ewibfc ewiufbc ewiubsf cewiubrf eciub  corrupti voluptatibus, dolore tempore minimang elit. Illum saepe dolores,vdsvWBVwhreifv wvweihbfc ewibfc ewiufbc ewiubsf cewiubrf eciub  corrupti voluptatibus, dolore tempore minim accusamus mcabo. Adipisci maxime, ad quasi animi neces</p>
                             <h4>Wykorzystane technologie</h4>
                             <p>HTML, CSS3, RWD, Bootstrap, JavaScript, JQuery</p>
                             <a href="#" class="projekt-link"><i class="fa fa-link"></i></a>
@@ -94,14 +128,14 @@
                     </div>
                 </div>
             </div>
-
-
+</div>
+<div class="col-6 col-md-4">
             <div class="portfolio-item" id="portfolio-item-2">
                 <div class="item-mask">
                     <div class="mask-content">
                         <div class="item-content-inner">
                             <h1>Lorem ipsum</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolorem dolore necessitatibus quidem. Beatae minus accusamus ea, exercitationem facere. Harum nostrum molestiae sapiente debitis numquam dolor autem laudantium beatae consequatur quidem ex, enim voluptatibus earum, nulla repudiandae sequi non id!</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibustis numquam dolor autem laudantium beatae consequatur quidem ex, enim voluptatibus earum</p>
                             <h4>Wykorzystane technologie</h4>
                             <p>HTML, CSS3, RWD, Bootstrap, JavaScript, JQuery</p>
                             <a href="#" class="projekt-link"><i class="fa fa-link"></i></a>
@@ -110,14 +144,14 @@
                 </div>
             </div>
 
-
-
+</div>
+<div class="col-12 col-md-4">
             <div class="portfolio-item" id="portfolio-item-3">
                 <div class="item-mask">
                     <div class="mask-content">
                         <div class="item-content-inner">
                             <h1>Lorem ipsum</h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa numquam nesciunt adipisci, a aliquam error doloremque aperiam ab voluptates sapiente itaque ea quam, iusto dolor cupiditate sequi fugiat dicta quo. Culpa dolorem quae doloremque natus corporis magni ex officiis alias!</p>
+                            <p>Lorem ipsum itaque ea quam, iusto dolor cupiditate sequi fugiat dicta quo. Culpa dolorem quae doloremque</p>
                             <h4>Wykorzystane technologie</h4>
                             <p>HTML, CSS3, RWD, Bootstrap, JavaScript, JQuery</p>
                             <a href="#" class="projekt-link"><i class="fa fa-link"></i></a>
@@ -126,10 +160,10 @@
                 </div>
             </div>
         </div>
+</div>
 
-
-
-
+</div>
+</div>
     </section>
 
     <!--   Portfolio stop-->
@@ -173,7 +207,9 @@
             Copyright &copy; Joanna Kowal
         </p>
     </footer>
-
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 
 </body>
 
