--- a/portfolio2/index.html
+++ b/portfolio2/index.html
@@ -13,7 +13,14 @@
 </head>
 <body>
 <!--navigation start-->
-<nav>blanaoefba</nav>
+<nav id="main-nav">
+    <ul>
+        <li><a href="">o mnie</a></li>
+        <li><a href="">umijętności</a></li>
+        <li><a href="">portfolio</a></li>
+        <li><a href="">kontakt</a></li>
+    </ul>
+</nav>
 <!--navigation stop-->
 <script
   src="https://code.jquery.com/jquery-3.3.1.min.js"
