--- a/portfolio3/index.html
+++ b/portfolio3/index.html
@@ -128,50 +128,48 @@
                 </div>
             </div>
             <div class="portfolio-items">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12 col-md-6 col-lg-4">
-                            <div class="portfolio-item" id="portfolio-item-1">
-                                <div class="item-mask">
-                                    <div class="item-content">
-                                        <div class="item-content-iner">
-                                            <h4>Lorem ipsum dolor.</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus minima soluta odit, nisi placeat totam eveniet pariatur odio at libero.</p>
-                                            <h5>Lorem ipsum dolor sit.</h5>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                                            <a href="#"><i class="fas fa-link"></i></a>
-                                        </div>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4 padnon">
+                        <div class="portfolio-item" id="portfolio-item-1">
+                            <div class="item-mask">
+                                <div class="item-content">
+                                    <div class="item-content-iner">
+                                        <h4>Lorem ipsum dolor.</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus minima soluta odit, nisi placeat totam eveniet pariatur odio at libero.</p>
+                                        <h5>Lorem ipsum dolor sit.</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                                        <a href="#"><i class="fas fa-link"></i></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-6 col-lg-4">
-                            <div class="portfolio-item" id="portfolio-item-2">
-                                <div class="item-mask">
-                                    <div class="item-content">
-                                        <div class="item-content-iner">
-                                            <h4>Lorem ipsum dolor.</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus minima soluta odit, nisi placeat totam eveniet pariatur odio at libero.</p>
-                                            <h5>Lorem ipsum dolor sit.</h5>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                                            <a href="#"><i class="fas fa-link"></i></a>
-                                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 padnon">
+                        <div class="portfolio-item" id="portfolio-item-2">
+                            <div class="item-mask">
+                                <div class="item-content">
+                                    <div class="item-content-iner">
+                                        <h4>Lorem ipsum dolor.</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus minima soluta odit, nisi placeat totam eveniet pariatur odio at libero.</p>
+                                        <h5>Lorem ipsum dolor sit.</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                                        <a href="#"><i class="fas fa-link"></i></a>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
 
-                        <div class="col-12 col-md-12 col-lg-4">
-                            <div class="portfolio-item" id="portfolio-item-3">
-                                <div class="item-mask">
-                                    <div class="item-content">
-                                        <div class="item-content-iner">
-                                            <h4>Lorem ipsum dolor.</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus minima soluta odit, nisi placeat totam eveniet pariatur odio at libero.</p>
-                                            <h5>Lorem ipsum dolor sit.</h5>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                                            <a href="#"><i class="fas fa-link"></i></a>
-                                        </div>
+                    <div class="col-12 col-md-12 col-lg-4 padnon">
+                        <div class="portfolio-item" id="portfolio-item-3">
+                            <div class="item-mask">
+                                <div class="item-content">
+                                    <div class="item-content-iner">
+                                        <h4>Lorem ipsum dolor.</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus minima soluta odit, nisi placeat totam eveniet pariatur odio at libero.</p>
+                                        <h5>Lorem ipsum dolor sit.</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                                        <a href="#"><i class="fas fa-link"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -180,6 +178,7 @@
                 </div>
             </div>
         </div>
+
     </section>
     <!--    portfolio stop-->
 
