zmiana pozycji obrazka w tle

--- a/dantex/index.html
+++ b/dantex/index.html
@@ -43,7 +43,7 @@
         <button id="btn-red" class="button">REZYGNUJĘ :(</button>
         <button id="btn-green" class="button">ZOSTAJĘ!</button>
     </section>
-    <footer></footer>
+    <footer>fgvfadbabf</footer>
     <script src="js/script.js"></script>
 </body>
 <!--BODY STOP-->
