--- a/dantex/index.html
+++ b/dantex/index.html
@@ -43,7 +43,9 @@
         <button id="btn-red" class="button">REZYGNUJĘ :(</button>
         <button id="btn-green" class="button">ZOSTAJĘ!</button>
     </section>
-    <footer>fgvfadbabf</footer>
+    <footer>
+        <div id="bottom-background"></div>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 <!--BODY STOP-->
