--- a/dantex/index.html
+++ b/dantex/index.html
@@ -48,7 +48,7 @@
         </section>
     </div>
     <footer>
-        <div id="bottom-background"></div>
+        <p>Copyright © 2018</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
