dodanie twardej spacji

--- a/dantex/index.html
+++ b/dantex/index.html
@@ -43,8 +43,8 @@
             <p>Dodatkowo dla naszych subskrybentów <span>darmowe miejsca parkingowe!</span></p>
         </section>
         <section id="buttons">
-            <button id="btn-red" class="button">REZYGNUJĘ :(</button>
-            <button id="btn-green" class="button">ZOSTAJĘ!</button>
+            <button id="btn-red" class="button"><p>REZYGNUJĘ&nbsp;:(</p></button>
+            <button id="btn-green" class="button"><p>ZOSTAJĘ!</p></button>
         </section>
     </div>
     <footer>
