responsywnośc dla mobile

--- a/dantex/index.html
+++ b/dantex/index.html
@@ -18,6 +18,7 @@
         <!--        </div>-->
     </header>
     <div id="content">
+        <div id="content-inner">
         <section id="main-info">
             <p>Czy chcesz zrezygnować z newslettera?</p>
             <p>Pamiętaj, że subskrybcja ma swoje zalety:</p>
@@ -46,6 +47,7 @@
             <button id="btn-red" class="button"><p>REZYGNUJĘ&nbsp;:(</p></button>
             <button id="btn-green" class="button"><p>ZOSTAJĘ!</p></button>
         </section>
+        </div>
     </div>
     <footer>
         <p>Copyright © 2018</p>
