--- a/dantex/index.html
+++ b/dantex/index.html
@@ -7,7 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Rajdhani:400,500" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive-tablet.css">
+    <link rel="stylesheet" href="css/responsive-mobile.css">
+    
 </head>
 <!--BODY START-->
 
