--- a/dantex/index.html
+++ b/dantex/index.html
@@ -46,8 +46,8 @@
             <p>Dodatkowo dla naszych subskrybentów <span>darmowe miejsca parkingowe!</span></p>
         </section>
         <section id="buttons">
-            <button id="btn-red" class="button"><p>REZYGNUJĘ&nbsp;:(</p></button>
-            <button id="btn-green" class="button"><p>ZOSTAJĘ!</p></button>
+            <button id="btn-red" class="button">REZYGNUJĘ&nbsp;:(</button>
+            <button id="btn-green" class="button">ZOSTAJĘ!</button>
         </section>
         </div>
     </div>
